Fix screen overflow

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   font-family: "Courier New", Courier, monospace;
   text-align: right;
   padding: 20px 5px;
+  overflow: hidden;
 }
 
 .button {
